@@ -13,7 +13,7 @@ my $builder = Module::Build->new(
         'Test::More'           => 0,
 	'Carp'                 => 0,
 	'DBI'                  => 0,
-	'SQL::Abstract::More'  => 1.04,
+	'SQL::Abstract::More'  => 1.12,
 	'Module::Build'        => 0,
         'Acme::Damn'           => 0,
         'Scalar::Util'         => 0,
