@@ -43,6 +43,7 @@ t/v1_Storable.t
 t/v2_Oracle.t
 t/v2_autolimit_firstrow.t
 t/v2_array_datatypes.t
+t/v2_bind_param.t
 t/v2_delete.t
 t/v2_generator.t
 t/v2_multischema.t
