@@ -129,6 +129,9 @@ sub bind {
     my $bind_param_args = pop @args;
     defined $indices or croak "no such named placeholder : $args[0]";
     $self->{bind_param_args}[$_] = $bind_param_args foreach @$indices;
+
+    # NOTE TODO: the code above does not work if status < SQLIZED because
+    # {param_indices} is not defined yet.
   }
   elsif (@args % 2 == 1) {
     croak "odd number of args to bind()";
@@ -403,7 +406,7 @@ sub execute {
   if ($self->{bind_param_args}) { # need to bind one by one because of DBI args
     my $n_bound_params = @{$self->{bound_params}};
     for my $i (0 .. $n_bound_params-1) {
-      my @bind = ($i, $self->{bound_params}[$i]);
+      my @bind = ($i+1, $self->{bound_params}[$i]);
       my $bind_args = $self->{bind_param_args}[$i];
       push @bind, $bind_args   if $bind_args;
       $sth->bind_param(@bind);
